LayoutTests/fast/dom/Geolocation/resources/timeout.js
@@ -1,0 +1,26 @@
+description("Tests that when timeout is non-zero, the success callback is called as expected.");
+
+var mockLatitude = 51.478;
+var mockLongitude = -0.166;
+var mockAccuracy = 100.0;
+
+window.layoutTestController.setGeolocationPermission(true);
+window.layoutTestController.setMockGeolocationPosition(mockLatitude,
+                                                       mockLongitude,
+                                                       mockAccuracy);
+
+var position;
+navigator.geolocation.getCurrentPosition(function(p) {
+    position = p;
+    shouldBe('position.coords.latitude', 'mockLatitude');
+    shouldBe('position.coords.longitude', 'mockLongitude');
+    shouldBe('position.coords.accuracy', 'mockAccuracy');
+    debug('<br /><span class="pass">TEST COMPLETE</span>');
+    window.layoutTestController.notifyDone();
+}, function(e) {
+    testFailed('Error callback invoked unexpectedly');
+    window.layoutTestController.notifyDone();
+}, {
+    timeout: 1000
+});
+window.layoutTestController.waitUntilDone();
